# uf-ws-gamma

./: .gitignore  Cargo.toml  README.md
crates/one/: Cargo.toml  build.rs  uniffi.toml
crates/one/src/: lib.rs  one.udl
crates/one/src/models/: mod.rs
crates/two/: Cargo.toml  build.rs  uniffi.toml
crates/two/src/: lib.rs  two.udl
crates/two/src/models/: mod.rs
crates/two/tests/: main.rs
crates/two/tests/bindings/: test.kts  test.py  test.swift
crates/zero/: Cargo.toml  build.rs  uniffi.toml
crates/zero/src/: lib.rs  zero.udl
crates/zero/src/models/: mod.rs
