[package]
name = "two"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[dependencies]
one = { path = "../one" }
zero = { path = "../zero" }
uniffi = { workspace = true, features = ["cli"] }

[build-dependencies]
uniffi = { workspace = true, features = ["build"] }

[dev-dependencies]
uniffi = { workspace = true, features = ["bindgen-tests"] }

[lib]
crate-type = ["staticlib", "cdylib", "lib"]
